syntax = "proto3";
import "Protos/shared.proto";

option csharp_namespace = "Server";

service Client {
	rpc newClient(ClientInfo) returns (ServiceStatus);					// rpc to create a new Client in the database
	rpc searchClientsByName(ClientName) returns (AllClients);			// rpc to get Client(s) that fit a search criteria by name.
	rpc updateClient(ClientInfo) returns (ServiceStatus);				// rpc for updating an existing clients information.
}

// record for storing information about one Client
message ClientInfo {
	optional int32 client_id = 1;
	string first_name = 2;
	string last_name = 3;
	string phone_number = 4;
	optional string email = 5;
}

// record for storing a Client name for searching
message ClientName {
	string cName = 1;
}

// record that represents 0 or more Clients
message AllClients {
	repeated ClientInfo clients = 1;
}